== Changelog ==

= 1.7.0.4 - xx-08-2020 =
* Fix - Form status toggle compatiable with WP 5.5+.
* Fix - Navbar design while switching to another language.
* Tweak - Updated selectWoo JS library to v1.0.8.

= 1.7.0.3 - 17-08-2020 =
* Fix - Referral URL unicode support.
* Fix - Conditional logic for dropdown broken.
* Fix - PerfectScrollbar issue in builder integration.

= 1.7.0.2 - 11-08-2020 =
* Fix - Conditional logic on select field.
* Fix - Likert table scroll in responsive.
* Fix - Drag and drop issue in tools page import form area.
* Fix - Conditional logic required message while using on the checkbox.
* Tweak - Upgrade URL to redirect to pricing page rather than product page.

= 1.7.0.1 - 20-07-2020 =
* Fix - Form status {de}active toggle button.
* Fix - reCAPTCHA working only for logged in user.
* Fix - Email subject while using select field smart tag.
* Fix - Select field placeholder not displayed in enhanced select and not selected in default select.
* Tweak - Modified `everest_forms_logged_in_user_recaptcha_disabled` with `everest_forms_recaptcha_disabled` hook.

= 1.7.0 - 15-07-2020 =
* Enhancement - Add support for form restriction addon.
* Added - Support for bulk options to Checkbox, Multiple Choice and Dropdown fields.
* Added - Introduce `get_multiple` method in `EVF_Form_Handler` to fetch multiple forms.
* Fix - Number Field validation issue with conditional logic.
* Fix - Modify logic for fetching unread and starred entries.
* Fix - Date/Time field to use local date instead of default UTC.
* Fix - Export of field data with HTML encoded special characters.
* Fix - The field placeholder & default value 0 (zero) does not display on the frontend.
* Tweak - Updated jQuery Validation JS library to v1.19.2.
* Tweak - Parameters for reCAPTCHA URL filter to change language code in v2 type.
* Tweak - Preserve entry status so they are restored correctly after moving to trash.